<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOverActivity">

    <ImageView
        android:id="@+id/winner"
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="0dp"
        app:srcCompat="@drawable/winner"
        android:padding="20dp"
        android:contentDescription="@string/winner"/>

    <TextView
        android:id="@+id/winnerBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/winner_box" />

    <TextView
        android:id="@+id/loserBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/loser_box" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onNewGame"
            android:text="@string/new_game" />
    </FrameLayout>

</LinearLayout>