<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChessActivity">

    <TextView
        android:id="@+id/currentTurn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/current_turn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <view
        android:id="@+id/chessView"
        class="edu.msu.prasadj2.chess.ChessView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="287dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/referenceButtons"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onDone"
                android:text="@string/done" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/referenceButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true">

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/referenceButtons"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/resign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onResign"
                android:text="@string/resign" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>